--- a/app/views/user_mailer/reset_password_email.text.erb
+++ b/app/views/user_mailer/reset_password_email.text.erb
@@ -1,2 +1,8 @@
+Hi <%= @user.first_name %> <%= @user.last_name %>!,
 
+We are sending you this email because you requested a password reset. Click on the link below to create a new password.
 <%= @url %>
+
+If you did not request a password reset, you can ignore this email. Your password won't be changed.
+
+The Helping Hand team
