--- a/app/views/user_mailer/goodbye_email.html.erb
+++ b/app/views/user_mailer/goodbye_email.html.erb
@@ -1,4 +1,4 @@
-<h2>Hi <%= @user.first_name %> <%= @user.last_name %>!,</h2>
+<h2>Hi <%= @user.first_name %> <%= @user.last_name %>,</h2>
 
 <p>
   You account has been deleted.<br/>
@@ -7,6 +7,6 @@
 </p>
 
 <p>
-  We wish you all the best, and hope to see you soon.
+  We wish you all the best, and hope to see you soon.<br/>
   The Helping Hand team
 </p>
