--- a/app/views/user_mailer/goodbye_email.text.erb
+++ b/app/views/user_mailer/goodbye_email.text.erb
@@ -1,4 +1,4 @@
-Hi <%= @user.first_name %> <%= @user.last_name %>!,
+Hi <%= @user.first_name %> <%= @user.last_name %>,
 
 You account has been deleted.
 We are sad to see you go, but that is life.
