--- a/app/views/user_mailer/reset_password_email.text.erb
+++ b/app/views/user_mailer/reset_password_email.text.erb
@@ -1,4 +1,4 @@
-Hi <%= @user.first_name %> <%= @user.last_name %>!,
+Hi <%= @user.first_name %> <%= @user.last_name %>,
 
 We are sending you this email because you requested a password reset. Click on the link below to create a new password.
 <%= @url %>
