--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -1,11 +1,11 @@
-<h2>Hi <%= @user.first_name %> <%= @user.last_name %>!,</h2>
+<h2>Hi <%= @user.first_name %> <%= @user.last_name %>,</h2>
 
 <p>
   Thank you for signing up at Helping Hand.<br/>
   We are happy to count you among our users. We hope that is the beginning of a wonderful adventures for you as well as the people you might meet during your journey as a user of our app.
 </p>
 
-<p>Log in right away to your personal space with the following link: <%= @url %>.</p>
+<p>Log in right away to your personal space with the following link: <%= @url %></p>
 
 <p>
   Cheers,
