--- a/app/views/user_mailer/reset_password_email.html.erb
+++ b/app/views/user_mailer/reset_password_email.html.erb
@@ -1,7 +1,10 @@
-<h2>Hi <%= @user.first_name %> <%= @user.last_name %>!,</h2>
+<h2>Hi <%= @user.first_name %> <%= @user.last_name %>,</h2>
 
-<p>We are sending you this email because you requested a password reset. Click on the link below to create a new password.<p>
-<%= @url %>
+<p>
+  We are sending you this email because you requested a password reset. Click on the link below to create a new password.<br/>
+  <%= @url %>
+<p>
+
 
 <p>If you did not request a password reset, you can ignore this email. Your password won't be changed.</p>
 
