--- a/app/views/user_mailer/welcome_email.text.erb
+++ b/app/views/user_mailer/welcome_email.text.erb
@@ -1,9 +1,9 @@
-Hi <%= @user.first_name %> <%= @user.last_name %>!,
+Hi <%= @user.first_name %> <%= @user.last_name %>,
 
 Thank you for signing up at Helping Hand.
 We are happy to count you among our users. We hope that is the beginning of a wonderful adventures for you as well as the people you might meet during your journey as a user of our app.
 
-Log in right away to your personal space with the following link: <%= @url %>.
+Log in right away to your personal space with the following link: <%= @url %>
 
 Cheers,
 The Helping Hand team
