--- a/app/views/request_mailer/request_expired_email.html.erb
+++ b/app/views/request_mailer/request_expired_email.html.erb
@@ -1,7 +1,7 @@
 <h2>Hi <%= @request.user.first_name %> <%= @request.user.last_name %>,</h2>
 
 <p>
-  Your new request '<%= @request.title %>' is now online and accessible to other users.<br/>
+  Your request <%= @request.title %> is now online and accessible to other users.<br/>
   You can check it as well, and edit it anytime via your dashboard at the following address:<br/>
   <%= @url %>
 </p>
