--- a/app/views/request_mailer/request_fulfilled_email.text.erb
+++ b/app/views/request_mailer/request_fulfilled_email.text.erb
@@ -1,6 +1,6 @@
 Hi <%= @request.user.first_name %> <%= @request.user.last_name %>,
 
-Your new request '<%= @request.title %>' is now online and accessible to other users.
+Your new request <%= @request.title %> is now online and accessible to other users.
 You can check it as well, and edit it anytime via your dashboard at the following address:
 <%= @url %>
 
