--- a/app/views/request_mailer/request_expired_email.text.erb
+++ b/app/views/request_mailer/request_expired_email.text.erb
@@ -1,8 +1,8 @@
 Hi <%= @request.user.first_name %> <%= @request.user.last_name %>,
 
-Your new request <%= @request.title %> is now online and accessible to other users.
-You can check it as well, and edit it anytime via your dashboard at the following address:
-<%= @url %>
+Your request '<%= @request.title %>' has expired.
+You have the option to seek for help again and republish this request.
+To do so, go to 'my requests' page, and click on more option on the said request, and select republish.
 
 Cheers,
 The Helping Hand team
