--- a/app/views/request_mailer/request_fulfilled_email.html.erb
+++ b/app/views/request_mailer/request_fulfilled_email.html.erb
@@ -1,9 +1,8 @@
 <h2>Hi <%= @request.user.first_name %> <%= @request.user.last_name %>,</h2>
 
 <p>
-  Your new request <%= @request.title %> is now online and accessible to other users.<br/>
-  You can check it as well, and edit it anytime via your dashboard at the following address:<br/>
-  <%= @url %>
+  Your request '<%= @request.title %>' has been marked as fulfilled.<br/>
+  We hope that you had an enjoyable experience.
 </p>
 
 <p>
