--- a/app/views/request_mailer/request_fulfilled_email.text.erb
+++ b/app/views/request_mailer/request_fulfilled_email.text.erb
@@ -1,8 +1,7 @@
 Hi <%= @request.user.first_name %> <%= @request.user.last_name %>,
 
-Your new request <%= @request.title %> is now online and accessible to other users.
-You can check it as well, and edit it anytime via your dashboard at the following address:
-<%= @url %>
+Your request '<%= @request.title %>' has been marked as fulfilled.
+We hope that you had an enjoyable experience.
 
 Cheers,
 The Helping Hand team
