--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -8,6 +8,6 @@
 <p>Log in right away to your personal space with the following link: <%= @url %></p>
 
 <p>
-  Cheers,
+  Cheers,<br/>
   The Helping Hand team
 </p>
